# Self-Driving-Patrol-Car

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  CPPLINT.cfg  README.md  run.sh
clang/: CMakeLists.txt  build.sh
clang/common/: sdpc_common.c  sdpc_lidar.c  sdpc_main.c  sdpc_uart.c
clang/include/sdpc/common/: sdpc_common.h  sdpc_main.h  sdpc_uart.h
clang/include/sdpc/vehicle_recognition/: sdpc_vehicle.h
clang/lane_recognition/: sdpc_lane.c
clang/vehicle_recognition/: sdpc_vehicle.c
core/: CMakeLists.txt  README.md  build.sh
core/common/: sdpc_camera.c  sdpc_common.c  sdpc_main.c  sdpc_msgque.c  sdpc_uart.c
core/include/sdpc/common/: sdpc_camera.h  sdpc_common.h  sdpc_lidar.h  sdpc_msgque.h  sdpc_uart.h
core/include/sdpc/lane_recognition/: sdpc_lane.h
core/include/sdpc/sensor_fusion/: sdpc_sensor_fusion.h
core/lane_recognition/: sdpc_lane.c
core/sensor_fusion/: sdpc_sensor_fusion.c
core/vehicle_recognition/: sdpc_vehicle.c
features/lane_detection/: CMakeLists.txt  README.md  build.sh  main.cpp
features/lane_detection/camera/: camera.cpp  lane_detection.cpp  traffic_light.cpp
features/lane_detection/common/: binary_semaphore.cpp  message_queue.cpp  mqtt.cpp  shared_memory.cpp  thread.cpp
features/lane_detection/core/: core.cpp
features/lane_detection/driving_control/: driving_control.cpp
features/lane_detection/include/lane_detection/: main.h
features/lane_detection/include/lane_detection/camera/: camera.h  lane_detection.h  traffic_light.h
features/lane_detection/include/lane_detection/common/: binary_semaphore.h  common.h  message_queue.h  mqtt.h  shared_memory.h  thread.h
features/lane_detection/include/lane_detection/core/: core.h
features/lane_detection/include/lane_detection/driving_control/: driving_control.h
features/lane_detection/include/lane_detection/lane_detect/: lane_detect.h
features/lane_detection/include/lane_detection/lidar/: lidar.h
features/lane_detection/include/lane_detection/traffic_light/: traffic_light.h
features/lane_detection/lane_detect/: lane_detect.cpp
features/lane_detection/lidar/: lidar.cpp
features/lane_detection/traffic_light/: traffic_light.cpp
features/lidar_control/: CMakeLists.txt  mak_common.inc  mak_def.inc
features/lidar_control/app/: Makefile
features/lidar_control/app/mqueue_receive/: Makefile  server.c
features/lidar_control/app/ultra_simple/: main.cpp
features/lidar_control/mqueue_receive/: Makefile  server.c
features/lidar_control/sdk/: Makefile
features/lidar_control/sdk/include/: rplidar.h  rplidar_cmd.h  rplidar_driver.h  rplidar_protocol.h  sl_lidar_cmd.h  sl_lidar_driver.h  sl_lidar_driver_impl.h
features/lidar_control/sdk/src/: rplidar_driver.cpp  sdkcommon.h  sl_crc.cpp  sl_lidar_driver.cpp  sl_serial_channel.cpp  sl_tcp_channel.cpp  sl_udp_channel.cpp
features/lidar_control/sdk/src/arch/linux/: net_serial.cpp  net_socket.cpp  thread.hpp
features/lidar_control/sdk/src/arch/macOS/: net_serial.cpp  net_serial.h  net_socket.cpp  thread.hpp  timer.cpp
features/lidar_control/sdk/src/arch/win32/: net_serial.cpp  net_socket.cpp  timer.h  winthread.hpp
features/lidar_control/sdk/src/hal/: event.h  locker.h  socket.h  thread.h
features/lidar_control/test/: main.txt
features/lidar_control/ultra_simple/: Makefile  main.cpp
features/mcu_control/: Makefile  README.md  build.sh
features/mcu_control/Core/Inc/: main.h  motor.h  stm32f4xx_it.h  struct.h  tim.h  usart.h
features/mcu_control/Core/Matlab/control_flow_ert_rtw/: control_flow.h  ert_main.c
features/mcu_control/Core/Src/: gpio.c  main.c  motor.c  stm32f4xx_it.c  tim.c  usart.c
features/mcu_control/Core/Startup/: STM32F407VETx_FLASH.ld
features/mcu_control/Core/UserCode/Inc/: user_struct.h  user_usart.h
features/mcu_control/Core/UserCode/Src/: user_main.c  user_usart.c
features/mcu_control/Core/control_flow_ert_rtw/: buildInfo.mat  codedescriptor.dmr  codertarget_assembly_flags.mk  control_flow.mk  modelsources.txt
features/mcu_control/Core/control_flow_ert_rtw/html/: control_flow_trace.html  define.js  metrics.js  rtwhilite.js  rtwreport.css
features/mcu_control/Core/simulink/include/: cgxert.h  fixedpoint.c  fixedpoint.h  i18n_c_api.h  rtw_continuous.h  rtw_extmode.h  rtw_matlogging.h  rtw_solver.h  rtw_storage.h  sfcn_loader_c_api.h  sigmapdef_sfcn.h  sigregdef.h  sigstream_rtw.h  simstruc.h  simstruc_compcond.h  simstruc_debug.h  simstruc_def.h  simstruc_implement.h  simstruc_internal.h  simstruc_types.h  simulink.c  (+19 more)
features/mcu_control/matlab/control_flow_ert_rtw/: control_flow.bat  control_flow.c  control_flow.h  control_flow.mk  defines.txt  ert_main.c  modelsources.txt  rtmodel.h  rtw_proj.tmw  rtwtypes.h
features/mcu_control/user_code/Inc/: user_main.h  user_tim.h
features/mcu_control/user_code/Src/: user_main.c  user_tim.c  user_usart.c
features/mcu_control/user_code/include/: user_main.h  user_struct.h  user_tim.h  user_usart.h
features/mcu_control/user_code/src/: user_main.c  user_tim.c  user_usart.c
features/web_gui/: README.md  accident.db  create_db.py  defective.db  main.py  requirements.txt  web_flask_v2.py
features/web_gui/DB/cpp/: db_cpp.txt  db_h.txt
features/web_gui/DB/python/: delete_db.py  over_speeding.db
features/web_gui/common/: common.py  semaphore.py  shared_memory.py
features/web_gui/gui/: __init__.py  gui.py
features/web_gui/static/: style.css
features/web_gui/static/css/: styles.css
features/web_gui/templates/: accident.html  base.html  debug.html  defective_lane.html  index.html  navpage.html  over_speeding.html
features/web_gui/utils/: camera.py  legacy_camera_reference.py
scm/docker/: Dockerfile.sdpc  Dockerfile.sdpc-build  Dockerfile.sdpc-ubuntu-20.04  docker.sh
scm/markdown/: SSH_key_for_gitlab.md  git_branch.md  gitlab_ci_for_x86_arch.md  wsl2_setup.md
scm/scripts/ci/: bash_ci.sh  build_ci.sh  clang_ci.sh  cmake_ci.sh  cpp_ci.sh  general_ci.sh  python_ci.sh  run_ci.sh  static_analytics.sh  test.sh
scm/scripts/common/: diff_check.sh  echo.sh  install_package.sh  requirements.txt  run.sh
(+65 files in other folders)
